--- a/src/app/core/components/layout/sidebar/sidebar.component.html
+++ b/src/app/core/components/layout/sidebar/sidebar.component.html
@@ -1,1 +1,26 @@
-<p>sidebar works!</p>
+<mat-sidenav #sidenav="matSidenav" class="mat-elevation-z8">
+  <h4 class="name">John Smith</h4>
+  <p class="designation">Software Engineer</p>
+
+  <mat-divider></mat-divider>
+
+  <button mat-button class="menu-button">
+    <mat-icon>home</mat-icon>
+    <span>Home</span>
+  </button>
+  <button mat-button class="menu-button">
+    <mat-icon>person</mat-icon>
+    <span>Profile</span>
+  </button>
+  <button mat-button class="menu-button">
+    <mat-icon>info</mat-icon>
+    <span>About</span>
+  </button>
+
+  <mat-divider></mat-divider>
+
+  <button mat-button class="menu-button">
+    <mat-icon>help</mat-icon>
+    <span>Help</span>
+  </button>
+</mat-sidenav>
