--- a/src/app/user/components/auth/register/register.component.html
+++ b/src/app/user/components/auth/register/register.component.html
@@ -1,9 +1,16 @@
 <section class="container my-5">
   <h1 class="text-center mb-3">Create an account</h1>
+  <div class="alert alert-danger" *ngIf="error">
+    <p>{{ error }}</p>
+  </div>
+  <div *ngIf="isLoading" class="text-center">
+    <app-loader></app-loader>
+  </div>
   <form
     #signup="ngForm"
     (ngSubmit)="onSubmit(signup)"
     class="form-card d-flex flex-column align-items-center"
+    *ngIf="!isLoading"
   >
     <mat-form-field appearance="outline">
       <mat-label>First Name</mat-label>
@@ -11,7 +18,7 @@
         type="text"
         matInput
         placeholder="Your First name"
-        ngModel
+        [(ngModel)]="register.firstname"
         name="firstName"
         required
         #lName="ngModel"
@@ -26,8 +33,8 @@
         type="text"
         matInput
         placeholder="Your Last name"
-        ngModel
-        name="lastName"
+        [(ngModel)]="register.lastname"
+        name="lastname"
         required
         #fName="ngModel"
       />
@@ -41,7 +48,7 @@
         type="text"
         matInput
         placeholder="Your Email"
-        ngModel
+        [(ngModel)]="register.email"
         name="email"
         email
         required
@@ -63,7 +70,7 @@
         type="password"
         matInput
         placeholder="Your Password"
-        ngModel
+        [(ngModel)]="register.password"
         name="password"
         minlength="6"
         required
@@ -78,7 +85,7 @@
         type="password"
         matInput
         placeholder="Retype Password"
-        ngModel
+        [(ngModel)]="register.password2"
         name="password2"
         minlength="6"
         required
@@ -87,7 +94,12 @@
     </mat-form-field>
     <mat-form-field appearance="outline">
       <mat-label>Date of Birth</mat-label>
-      <input matInput [matDatepicker]="picker" />
+      <input
+        matInput
+        [matDatepicker]="picker"
+        [(ngModel)]="register.dob"
+        name="birthdate"
+      />
       <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
       <mat-datepicker #picker></mat-datepicker>
     </mat-form-field>
@@ -97,7 +109,7 @@
         type="number"
         matInput
         placeholder="Your Mobile Number"
-        ngModel
+        [(ngModel)]="register.phoneNo"
         name="phoneNumber"
         required
         #pNo="ngModel"
