medication and allergies module cleaning

--- a/src/app/medication-and-allergies/components/medication-history/medication-history.component.html
+++ b/src/app/medication-and-allergies/components/medication-history/medication-history.component.html
@@ -1,535 +1,11 @@
 <div id="wrapper">
-  <ul
-    class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion"
-    id="accordionSidebar"
-  >
-    <a
-      style="background: #fff"
-      class="sidebar-brand d-flex align-items-center justify-content-center"
-      href="/"
-    >
-      <div class="sidebar-brand-text mx-3">
-        <svg
-          width="200px"
-          class="site-header__logo-on-light"
-          xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 221.1 26.72"
-        >
-          <rect fill="#07518c" y="18.73" width="7.94" height="7.94"></rect>
-          <rect fill="#07518c" y="0.05" width="7.94" height="7.94"></rect>
-          <rect
-            fill="#929497"
-            x="18.68"
-            y="0.05"
-            width="7.94"
-            height="7.94"
-          ></rect>
-          <rect
-            fill="#929497"
-            x="18.68"
-            y="18.73"
-            width="7.94"
-            height="7.94"
-          ></rect>
-          <rect
-            fill="#07518c"
-            x="9.34"
-            y="18.73"
-            width="7.94"
-            height="7.94"
-          ></rect>
-          <rect
-            fill="#07518c"
-            x="9.34"
-            y="0.05"
-            width="7.94"
-            height="7.94"
-          ></rect>
-          <rect fill="#07518c" y="9.39" width="7.94" height="7.94"></rect>
-          <rect
-            fill="#929497"
-            x="18.68"
-            y="9.39"
-            width="7.94"
-            height="7.94"
-          ></rect>
-          <rect
-            fill="#929497"
-            x="9.34"
-            y="9.39"
-            width="7.94"
-            height="7.94"
-          ></rect>
-          <path
-            fill="#07518c"
-            d="M62,16.55v.77c0,2.87,0,5.47-2.47,7.47S54.1,26.72,51,26.72c-7.28,0-12.6-.35-12.6-10V10c0-8.7,4.75-10,12.6-10,7.36,0,10.79.74,10.93,8.63v1H54.56v-1c-.25-2.35-1.92-2.53-4.35-2.53-4.07,0-4.47,1.23-4.47,5v4.1c0,3.93.18,5.44,4.47,5.44,3,0,4.39-.21,4.39-3.3v-.77Z"
-          ></path>
-          <path
-            fill="#07518c"
-            d="M70.81,4.84H64.67V.21h6.14Zm0,21.67H64.67V8.1h6.14Z"
-          ></path>
-          <path
-            fill="#084e8c"
-            d="M88.34,12.52h-7.1v8.24c0,1.08.25,1.54,1.39,1.54,1.61,0,1.53-1.12,1.61-2.39l0-1h4.89v1.65c0,5-1.89,6.14-6.89,6.14-3.93,0-7.17-.49-7.17-5.12V12.52H72.81V8.1H75.1V4.21h6.14V8.1h7.1Z"
-          ></path>
-          <path
-            fill="#07518c"
-            d="M97.3,4.84H91.16V.21H97.3Zm0,21.67H91.16V8.1H97.3Z"
-          ></path>
-          <path
-            fill="#07518c"
-            d="M112.66,26.51l.21-3.55h-.28c-.86,2.85-3,3.76-5.61,3.76-3.71,0-6.36-1.55-6.36-6V8.1h6.15v11c0,1.69.18,3,2.25,3,1.64,0,3.46-.84,3.46-2.67V8.1h6.14V26.51Z"
-          ></path>
-          <path
-            fill="#07518c"
-            d="M133.58,13.32c-.21-1.54-1.53-1.54-2.5-1.54-3.21,0-3.21.39-3.21,1.47,0,.91.07,1.55,3.21,1.62,6.36.14,9.18.49,9.18,5.64,0,5.4-4.25,6.21-9.18,6.21s-9.17.1-9.17-6h6.14c0,2.06,1.53,2.06,3,2.06,2.79,0,3.22-.17,3.22-1.61,0-1.82-1.07-1.82-3.22-1.82-7.78,0-9.17-1.72-9.17-5.47,0-5.92,4-6,9.17-6,3.43,0,8.29,0,8.29,4.56v.87Z"
-          ></path>
-          <polygon
-            fill="#929497"
-            points="155.44 26.51 148.29 26.51 148.29 6.31 141.44 6.31 141.44 0.21 162.65 0.21 162.65 6.31 155.44 6.31 155.44 26.51"
-          ></polygon>
-          <path
-            fill="#929497"
-            d="M180,20.37c0,2.77-.93,4.35-2.53,5.26s-3.9,1.09-6.61,1.09c-7.39,0-9.18-2.53-9.18-9.4,0-7.08,1.65-9.43,9.18-9.43,7,0,9.14,1.93,9.14,9.43v1H167.87c0,3.22.49,4.17,3,4.17,1.89,0,3.11-.21,3.11-2.14ZM173.9,15c0-2.74-1-2.91-3.11-2.91s-2.85.49-2.92,2.91Z"
-          ></path>
-          <path
-            fill="#929497"
-            d="M200.29,19.14c0,3.44-.61,5.33-2.07,6.35s-3.68,1.23-7,1.23c-7.25,0-9-2.14-9-9.4,0-6.24,1.29-9.43,9-9.43,5.39,0,9.07.56,9.07,7.12h-6.15c0-1-.06-1.58-.49-2a3.67,3.67,0,0,0-2.43-.52c-2.18,0-2.82.59-2.82,4.8s.5,4.77,2.82,4.77c2.78,0,2.92-.67,2.92-2.95Z"
-          ></path>
-          <path
-            fill="#929497"
-            d="M209.21,11.54h.25c.9-2.91,2.72-3.65,5.61-3.65,4.14,0,6,1.93,6,5.89V26.51H215V15.18c0-1.79-.53-2.66-2.53-2.66-2.75,0-3.22,1.61-3.22,3.85V26.51h-6.14V.21h6.14Z"
-          ></path>
-        </svg>
-      </div>
-    </a>
-
-    <hr class="sidebar-divider my-0" />
-
-    <li class="nav-item active">
-      <a class="nav-link" href="index.html">
-        <i class="fas fa-fw fa-tachometer-alt"></i>
-        <span>Patient Dashboard</span></a
-      >
-    </li>
-
-    <hr class="sidebar-divider" />
-
-    <div class="sidebar-heading">Interface</div>
-
-    <li class="nav-item">
-      <a
-        class="nav-link collapsed"
-        href="#"
-        data-toggle="collapse"
-        data-target="#collapseTwo"
-        aria-expanded="true"
-        aria-controls="collapseTwo"
-      >
-        <i class="fas fa-fw fa-cog"></i>
-        <span>Demographics</span>
-      </a>
-      <div
-        id="collapseTwo"
-        class="collapse"
-        aria-labelledby="headingTwo"
-        data-parent="#accordionSidebar"
-      >
-        <div class="bg-white py-2 collapse-inner rounded">
-          <h6 class="collapse-header">Medication & Allergies</h6>
-          <a class="collapse-item" href="buttons.html">Buttons</a>
-          <a class="collapse-item" href="cards.html">Cards</a>
-        </div>
-      </div>
-    </li>
-
-    <li class="nav-item">
-      <a
-        class="nav-link collapsed"
-        href="#"
-        data-toggle="collapse"
-        data-target="#collapseUtilities"
-        aria-expanded="true"
-        aria-controls="collapseUtilities"
-      >
-        <i class="fas fa-fw fa-wrench"></i>
-        <span>Medication & Allergies</span>
-      </a>
-      <div
-        id="collapseUtilities"
-        class="collapse"
-        aria-labelledby="headingUtilities"
-        data-parent="#accordionSidebar"
-      >
-        <div class="bg-white py-2 collapse-inner rounded">
-          <h6 class="collapse-header">Custom Utilities:</h6>
-          <a class="collapse-item" href="utilities-color.html">Colors</a>
-          <a class="collapse-item" href="utilities-border.html">Borders</a>
-          <a class="collapse-item" href="utilities-animation.html"
-            >Animations</a
-          >
-          <a class="collapse-item" href="utilities-other.html">Other</a>
-        </div>
-      </div>
-    </li>
-
-    <hr class="sidebar-divider" />
-
-    <div class="sidebar-heading">Addons</div>
-
-    <li class="nav-item">
-      <a
-        class="nav-link collapsed"
-        href="#"
-        data-toggle="collapse"
-        data-target="#collapsePages"
-        aria-expanded="true"
-        aria-controls="collapsePages"
-      >
-        <i class="fas fa-fw fa-folder"></i>
-        <span>Pages</span>
-      </a>
-      <div
-        id="collapsePages"
-        class="collapse"
-        aria-labelledby="headingPages"
-        data-parent="#accordionSidebar"
-      >
-        <div class="bg-white py-2 collapse-inner rounded">
-          <h6 class="collapse-header">Login Screens:</h6>
-          <a class="collapse-item" href="login.html">Login</a>
-          <a class="collapse-item" href="register.html">Register</a>
-          <a class="collapse-item" href="forgot-password.html"
-            >Forgot Password</a
-          >
-          <div class="collapse-divider"></div>
-          <h6 class="collapse-header">Other Pages:</h6>
-          <a class="collapse-item" href="404.html">404 Page</a>
-          <a class="collapse-item" href="blank.html">Blank Page</a>
-        </div>
-      </div>
-    </li>
-
-    <li class="nav-item">
-      <a class="nav-link" href="charts.html">
-        <i class="fas fa-fw fa-chart-area"></i>
-        <span>Charts</span></a
-      >
-    </li>
-
-    <li class="nav-item">
-      <a class="nav-link" href="tables.html">
-        <i class="fas fa-fw fa-table"></i>
-        <span>Tables</span></a
-      >
-    </li>
-  </ul>
-
   <div id="content-wrapper" class="d-flex flex-column">
     <div id="content">
-      <nav
-        class="
-          navbar navbar-expand navbar-light
-          bg-white
-          topbar
-          mb-4
-          static-top
-          shadow
-        "
-      >
-        <button
-          id="sidebarToggleTop"
-          class="btn btn-link d-md-none rounded-circle mr-3"
-        >
-          <i class="fa fa-bars"></i>
-        </button>
-
-        <form
-          class="
-            d-none d-sm-inline-block
-            form-inline
-            mr-auto
-            ml-md-3
-            my-2 my-md-0
-            mw-100
-            navbar-search
-          "
-        >
-          <div class="input-group">
-            <input
-              type="text"
-              class="form-control bg-light border-0 small"
-              placeholder="Search for..."
-              aria-label="Search"
-              aria-describedby="basic-addon2"
-            />
-            <div class="input-group-append">
-              <button class="btn btn-primary" type="button">
-                <i class="fas fa-search fa-sm"></i>
-              </button>
-            </div>
-          </div>
-        </form>
-
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item dropdown no-arrow d-sm-none">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              id="searchDropdown"
-              role="button"
-              data-toggle="dropdown"
-              aria-haspopup="true"
-              aria-expanded="false"
-            >
-              <i class="fas fa-search fa-fw"></i>
-            </a>
-            <div
-              class="
-                dropdown-menu dropdown-menu-right
-                p-3
-                shadow
-                animated--grow-in
-              "
-              aria-labelledby="searchDropdown"
-            >
-              <form class="form-inline mr-auto w-100 navbar-search">
-                <div class="input-group">
-                  <input
-                    type="text"
-                    class="form-control bg-light border-0 small"
-                    placeholder="Search for..."
-                    aria-label="Search"
-                    aria-describedby="basic-addon2"
-                  />
-                  <div class="input-group-append">
-                    <button class="btn btn-primary" type="button">
-                      <i class="fas fa-search fa-sm"></i>
-                    </button>
-                  </div>
-                </div>
-              </form>
-            </div>
-          </li>
-
-          <li class="nav-item dropdown no-arrow mx-1">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              id="alertsDropdown"
-              role="button"
-              data-toggle="dropdown"
-              aria-haspopup="true"
-              aria-expanded="false"
-            >
-              <i class="fas fa-bell fa-fw"></i>
-              <span class="badge badge-danger badge-counter">3+</span>
-            </a>
-            <div
-              class="
-                dropdown-list dropdown-menu dropdown-menu-right
-                shadow
-                animated--grow-in
-              "
-              aria-labelledby="alertsDropdown"
-            >
-              <h6 class="dropdown-header">Alerts Center</h6>
-              <a class="dropdown-item d-flex align-items-center" href="#">
-                <div class="mr-3">
-                  <div class="icon-circle bg-primary">
-                    <i class="fas fa-file-alt text-white"></i>
-                  </div>
-                </div>
-                <div>
-                  <div class="small text-gray-500">December 12, 2019</div>
-                  <span class="font-weight-bold"
-                    >A new monthly report is ready to download!</span
-                  >
-                </div>
-              </a>
-              <a class="dropdown-item d-flex align-items-center" href="#">
-                <div class="mr-3">
-                  <div class="icon-circle bg-success">
-                    <i class="fas fa-donate text-white"></i>
-                  </div>
-                </div>
-                <div>
-                  <div class="small text-gray-500">December 7, 2019</div>
-                  $290.29 has been deposited into your account!
-                </div>
-              </a>
-              <a class="dropdown-item d-flex align-items-center" href="#">
-                <div class="mr-3">
-                  <div class="icon-circle bg-warning">
-                    <i class="fas fa-exclamation-triangle text-white"></i>
-                  </div>
-                </div>
-                <div>
-                  <div class="small text-gray-500">December 2, 2019</div>
-                  Spending Alert: We've noticed unusually high spending for your
-                  account.
-                </div>
-              </a>
-              <a class="dropdown-item text-center small text-gray-500" href="#"
-                >Show All Alerts</a
-              >
-            </div>
-          </li>
-
-          <li class="nav-item dropdown no-arrow mx-1">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              id="messagesDropdown"
-              role="button"
-              data-toggle="dropdown"
-              aria-haspopup="true"
-              aria-expanded="false"
-            >
-              <i class="fas fa-envelope fa-fw"></i>
-              <span class="badge badge-danger badge-counter">7</span>
-            </a>
-            <div
-              class="
-                dropdown-list dropdown-menu dropdown-menu-right
-                shadow
-                animated--grow-in
-              "
-              aria-labelledby="messagesDropdown"
-            >
-              <h6 class="dropdown-header">Message Center</h6>
-              <a class="dropdown-item d-flex align-items-center" href="#">
-                <div class="dropdown-list-image mr-3">
-                  <img
-                    class="rounded-circle"
-                    undraw_posting_photo.svg
-                    src="/assets/images/undraw_profile.svg"
-                    alt="..."
-                  />
-                  <div class="status-indicator bg-success"></div>
-                </div>
-                <div class="font-weight-bold">
-                  <div class="text-truncate">
-                    Hi there! I am wondering if you can help me with a problem
-                    I've been having.
-                  </div>
-                  <div class="small text-gray-500">Emily Fowler · 58m</div>
-                </div>
-              </a>
-              <a class="dropdown-item d-flex align-items-center" href="#">
-                <div class="dropdown-list-image mr-3">
-                  <img
-                    class="rounded-circle"
-                    src="img/undraw_profile_2.svg"
-                    alt="..."
-                  />
-                  <div class="status-indicator"></div>
-                </div>
-                <div>
-                  <div class="text-truncate">
-                    I have the photos that you ordered last month, how would you
-                    like them sent to you?
-                  </div>
-                  <div class="small text-gray-500">Jae Chun · 1d</div>
-                </div>
-              </a>
-              <a class="dropdown-item d-flex align-items-center" href="#">
-                <div class="dropdown-list-image mr-3">
-                  <img
-                    class="rounded-circle"
-                    src="img/undraw_profile_3.svg"
-                    alt="..."
-                  />
-                  <div class="status-indicator bg-warning"></div>
-                </div>
-                <div>
-                  <div class="text-truncate">
-                    Last month's report looks great, I am very happy with the
-                    progress so far, keep up the good work!
-                  </div>
-                  <div class="small text-gray-500">Morgan Alvarez · 2d</div>
-                </div>
-              </a>
-              <a class="dropdown-item d-flex align-items-center" href="#">
-                <div class="dropdown-list-image mr-3">
-                  <img
-                    class="rounded-circle"
-                    src="https://source.unsplash.com/Mv9hjnEUHR4/60x60"
-                    alt="..."
-                  />
-                  <div class="status-indicator bg-success"></div>
-                </div>
-                <div>
-                  <div class="text-truncate">
-                    Am I a good boy? The reason I ask is because someone told me
-                    that people say this to all dogs, even if they aren't
-                    good...
-                  </div>
-                  <div class="small text-gray-500">Chicken the Dog · 2w</div>
-                </div>
-              </a>
-              <a class="dropdown-item text-center small text-gray-500" href="#"
-                >Read More Messages</a
-              >
-            </div>
-          </li>
-
-          <div class="topbar-divider d-none d-sm-block"></div>
-
-          <li class="nav-item dropdown no-arrow">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              id="userDropdown"
-              role="button"
-              data-toggle="dropdown"
-              aria-haspopup="true"
-              aria-expanded="false"
-            >
-              <span class="mr-2 d-none d-lg-inline text-gray-600 small"
-                >Douglas McGee</span
-              >
-              <img
-                class="img-profile rounded-circle"
-                src="/assets/images/undraw_profile.svg"
-              />
-            </a>
-            <div
-              class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
-              aria-labelledby="userDropdown"
-            >
-              <a class="dropdown-item" href="#">
-                <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
-                Profile
-              </a>
-              <a class="dropdown-item" href="#">
-                <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
-                Settings
-              </a>
-              <a class="dropdown-item" href="#">
-                <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
-                Activity Log
-              </a>
-              <div class="dropdown-divider"></div>
-              <a
-                class="dropdown-item"
-                href="#"
-                data-toggle="modal"
-                data-target="#logoutModal"
-              >
-                <i
-                  class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"
-                ></i>
-                Logout
-              </a>
-            </div>
-          </li>
-        </ul>
-      </nav>
-
       <div class="container-fluid">
         <div class="d-sm-flex align-items-center justify-content-center mb-4">
-          <h1 class="h3 mb-0 text-gray-800">Medication & Allergies History</h1>
+          <h1 class="h3 mb-0 text-gray-800 mt-5">
+            Medication & Allergies History
+          </h1>
           <!-- <a
               href="#"
               class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"
@@ -1051,13 +527,5 @@
         </tbody>
       </table>
     </section>
-
-    <footer class="sticky-footer bg-white">
-      <div class="container my-auto">
-        <div class="copyright text-center my-auto">
-          <span>Copyright © Your Website 2021</span>
-        </div>
-      </div>
-    </footer>
   </div>
 </div>
