--- a/src/app/dashboard/patient-dashboard/components/patient-dashboard/patient-dashboard.component.html
+++ b/src/app/dashboard/patient-dashboard/components/patient-dashboard/patient-dashboard.component.html
@@ -1,1 +1,5 @@
-<p>Dashbord works here</p>
+<mat-tab-group animationDuration="0ms">
+  <mat-tab label="My Appointments"> Content 1 </mat-tab>
+  <mat-tab label="Demographics"> Content 2 </mat-tab>
+  <mat-tab label="Medication"> Content 3 </mat-tab>
+</mat-tab-group>
