--- a/src/app/core/components/layout/sidebar/sidebar.component.html
+++ b/src/app/core/components/layout/sidebar/sidebar.component.html
@@ -36,7 +36,10 @@
   </li>
 
   <li class="nav-item">
-    <a class="nav-link collapsed">
+    <a
+      class="nav-link collapsed"
+      [routerLink]="['/medication-and-allergies/form']"
+    >
       <i class="fas fa-fw fa-wrench"></i>
       <span>Medication & Allergies</span>
     </a>
