worked on auth guards

--- a/src/app/core/components/layout/header/header.component.html
+++ b/src/app/core/components/layout/header/header.component.html
@@ -30,6 +30,7 @@
     [matMenuTriggerFor]="menu"
     aria-label="Example icon-button with a menu"
   >
+    {{ username }}
     <img
       class="rounded-circle"
       undraw_posting_photo.svg
