--- a/src/app/core/components/layout/sidebar/sidebar.component.scss
+++ b/src/app/core/components/layout/sidebar/sidebar.component.scss
@@ -15,7 +15,7 @@ mat-sidenav {
 }
 
 .sidebar {
-  background-color: #084e8c;
+  background-color: #673ab7;
   width: 200px;
   min-height: 100vh;
 }
