--- a/src/app/core/components/layout/header/header.component.scss
+++ b/src/app/core/components/layout/header/header.component.scss
@@ -1,9 +1,22 @@
-a {
-  text-decoration: none;
-  color: #000;
+.navbar {
+  display: block;
 }
-
-a:hover,
-a:active {
-  color: lightgray;
+.w-100 {
+  width: 100% !important;
+}
+.profile-btn {
+  margin-left: 39rem;
+}
+.dashboard-heading {
+  color: #007bff;
+}
+mat-sidenav {
+  margin: 16px;
+  width: 200px;
+  border-right: none;
+  background: #002b5c;
+  color: white;
+  border-radius: 10px;
+  padding: 16px;
+  text-align: center;
 }
