--- a/src/app/core/components/layout/sidebar/sidebar.component.html
+++ b/src/app/core/components/layout/sidebar/sidebar.component.html
@@ -2,13 +2,14 @@
   class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion"
   id="accordionSidebar"
 >
-  <li class="nav-item active">
+  <li class="nav-item active menu-button">
     <a class="nav-link" [routerLink]="['/dashboard/patient-dashboard']">
-      <i class="fas fa-fw fa-tachometer-alt"></i>
-      <span>Patient Dashboard</span></a
-    >
+      <mat-icon>dashboard</mat-icon>
+      <span>Dashboard</span>
+    </a>
   </li>
 
+  <mat-divider></mat-divider>
   <li class="nav-item">
     <a
       class="nav-link collapsed"
@@ -18,7 +19,7 @@
       aria-expanded="true"
       aria-controls="collapseTwo"
     >
-      <i class="fas fa-fw fa-cog"></i>
+      <mat-icon>graphic_eq</mat-icon>
       <span>Demographics</span>
     </a>
     <div
@@ -34,14 +35,14 @@
       </div>
     </div>
   </li>
-
+  <mat-divider></mat-divider>
   <li class="nav-item">
     <a
       class="nav-link collapsed"
       [routerLink]="['/medication-and-allergies/form']"
     >
-      <i class="fas fa-fw fa-wrench"></i>
-      <span>Medication & Allergies</span>
+      <mat-icon>local_hospital</mat-icon>
+      <span>Medication</span>
     </a>
     <div
       id="collapseUtilities"
@@ -58,4 +59,40 @@
       </div>
     </div>
   </li>
+  <mat-divider></mat-divider>
+  <li class="nav-item menu-button">
+    <a class="nav-link">
+      <mat-icon>info</mat-icon>
+      <span>Immunization</span>
+    </a>
+  </li>
+  <mat-divider></mat-divider>
+  <li class="nav-item menu-button">
+    <a class="nav-link">
+      <mat-icon>calendar_today</mat-icon>
+      <span>Appointments</span>
+    </a>
+  </li>
+  <mat-divider></mat-divider>
+  <li class="nav-item menu-button">
+    <a class="nav-link">
+      <mat-icon>schedule</mat-icon>
+      <span>Plan of Care</span>
+    </a>
+  </li>
+  <mat-divider></mat-divider>
+  <li class="nav-item menu-button">
+    <a class="nav-link">
+      <mat-icon>payment</mat-icon>
+      <span>Billing</span>
+    </a>
+  </li>
+  <mat-divider></mat-divider>
+  <li class="nav-item menu-button">
+    <a class="nav-link">
+      <mat-icon>person_add</mat-icon>
+      <span>Profile</span>
+    </a>
+  </li>
+  <mat-divider></mat-divider>
 </ul>
