--- a/src/app/dashboard/patient-dashboard/components/patient-dashboard/patient-dashboard.component.html
+++ b/src/app/dashboard/patient-dashboard/components/patient-dashboard/patient-dashboard.component.html
@@ -1,5 +1,57 @@
-<mat-tab-group animationDuration="0ms">
-  <mat-tab label="My Appointments"> Content 1 </mat-tab>
-  <mat-tab label="Demographics"> Content 2 </mat-tab>
-  <mat-tab label="Medication"> Content 3 </mat-tab>
-</mat-tab-group>
+<nav aria-label="breadcrumb">
+  <ol class="breadcrumb breadcumb-ol">
+    <li class="breadcrumb-item"><a href="#">Home</a></li>
+    <li class="breadcrumb-item active" aria-current="page">Dashboard</li>
+  </ol>
+</nav>
+<div class="container">
+  <div class="row">
+    <div class="col demographics">
+      <div class="col-md-12">
+        <h4>Demographics</h4>
+      </div>
+    </div>
+    <div class="col medication">
+      <div class="col-md-12">
+        <h4>Medication</h4>
+      </div>
+    </div>
+
+    <div class="col billing">
+      <div class="col-md-12">
+        <h4>Billing</h4>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col immunization">
+      <div class="col-md-12">
+        <h4>Immunization</h4>
+      </div>
+    </div>
+    <div class="col plan">
+      <div class="col-md-12">
+        <h4>Plan Of Care</h4>
+      </div>
+    </div>
+    <div class="col profile">
+      <div class="col-md-12">
+        <h4>Profile</h4>
+      </div>
+    </div>
+  </div>
+  <br />
+  <mat-divider></mat-divider>
+  <br />
+  <div class="clearfix"></div>
+  <nav aria-label="breadcrumb" style="background-color: #007bff">
+    <ol class="breadcrumb" style="background-color: #007bff">
+      <li class="breadcrumb-item"><h4>Appointments</h4></li>
+    </ol>
+  </nav>
+  <div class="col">
+    <div class="col-md-12">
+      <div id="calendar"></div>
+    </div>
+  </div>
+</div>
